@@ -1,5 +1,14 @@
 2017-10-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/sparc/sparc64/fpu/multiarch/Makefile (sysdeps_calls):
+	Add s_isnanf-generic and s_isnan-generic objects.
+	* sysdeps/sparc/sparc64/fpu/multiarch/s_isnan-generic.S: New file.
+	* sysdeps/sparc/sparc64/fpu/multiarch/s_isnanf-generic.S: Likewise.
+	* sysdeps/sparc/sparc64/fpu/multiarch/s_isnan.c: Likewise.
+	* sysdeps/sparc/sparc64/fpu/multiarch/s_isnanf.c: Likewise.
+	* sysdeps/sparc/sparc64/fpu/multiarch/s_isnan.S: Remove file.
+	* sysdeps/sparc/sparc64/fpu/multiarch/s_isnanf.S: Likewise.
+
 	* sysdeps/sparc/sparc-ifunc.h (sparc_libm_ifunc_redirected): New
 	macro.
 	* sysdeps/sparc/sparc64/fpu/multiarch/Makefile (sysdep_calls): New
